fix: Update base file 'firestore.html'

--- a/02 - Configurer l'environnement technique nécessaire à Firebase/_ressources/firebase-playground-base/public/firestore.html
+++ b/02 - Configurer l'environnement technique nécessaire à Firebase/_ressources/firebase-playground-base/public/firestore.html
@@ -119,26 +119,26 @@
           <div class="mb-3 row">
             <label for="titre" class="col-sm-3 col-form-label text-end">Titre</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="titre" />
+              <input type="text" class="form-control" name="nom" />
             </div>
           </div>
           <div class="mb-3 row">
             <label for="description" class="col-sm-3 col-form-label text-end">Description</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="description" />
+              <input type="text" class="form-control" name="description" />
             </div>
           </div>
           <div class="mb-3 row">
             <label for="constructeur" class="col-sm-3 col-form-label text-end">Constructeur</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="constructeur" />
+              <input type="text" class="form-control" name="constructeur" />
             </div>
           </div>
           <div class="mb-3 row">
             <label for="prix" class="col-sm-3 col-form-label text-end">Prix</label>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="number" class="form-control" id="prix" />
+                <input type="number" class="form-control" name="prix" />
                 <span class="input-group-text">&euro;</span>
               </div>
             </div>
@@ -146,7 +146,7 @@
           <div class="mb-3 row">
             <label for="image" class="col-sm-3 col-form-label text-end">URL de l'image</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="image" placeholder="http://" />
+              <input type="text" class="form-control" name="photo" placeholder="http://" />
             </div>
           </div>
 
